# legal-rag-be

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
