[project]
name = "legal_rag_be"
version = "0.1.0"
description = "RAG system applied on part of the belgian legal code"
readme = "README.md"
authors = [
    { name = "Patrick Miroglio" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.25",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7.4",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "typeguard",
    "pre-commit",
    "commitizen",
    "ipykernel",
    "ipython",
    "pdoc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.mypy]
junit_xml = "reports/mypy.xml"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.ruff]
fix = true
line-length = 100
src = ["src", "tests"]
